# IMDgroup-gorun

./: .gitignore  README.md  README.org  pyproject.toml
examples/: gorun-config.example.toml
scripts/: gorun-all-ready.sh
src/IMDgroup/gorun/: __init__.py  cleanVASP.py  gorun-atat-local.py  gorun-maps.py  gorun.py  gorun_atat_local.py  gorun_maps.py  sbatch.py  slurm.py
